--- a/vignettes/DesignPrimers.Rmd
+++ b/vignettes/DesignPrimers.Rmd
@@ -2,16 +2,9 @@
 title: "Design Group-Specific Primers"
 author: "Erik S. Wright"
 date: "`r Sys.Date()`"
-output: 
-  rmarkdown::html_vignette:
-    toc: true
----
+output: rmarkdown::html_vignette
 
-```{r echo=FALSE}
-options(continue = " ")
-options(width = 80)
-options(max.print = 20)
-```
+---
 
 # Introduction
 
@@ -21,9 +14,17 @@ A database of **aligned DNA sequences** separated into groups is used as input t
 
 # The Objective of Primer Design
 
-The objective of primer design is straightforward: to determine a set of forward and reverse primers that will amplify one group of sequences (the target) but no others (the non-targets). If such a primer set is unattainable then the goal becomes to accurately predict potential cross-amplification with non-target groups. This knowledge enables an educated assessment of the different primer options that could be used to minimize non-target interference. The chosen primers could then be synthesized and experimentally characterized with PCR or quantitative PCR (qPCR). Possible applications include allele specific PCR, quantifying a subset of organisms in a sample, or enriching for the DNA of a target group before downstream sequencing.
+The objective of primer design is straightforward: to determine a set of forward and reverse primers that will amplify one group of sequences (the target) but no others (the non-targets). If such a primer set is unattainable then the goal becomes to accurately predict potential cross-amplification with non-target groups. This knowledge enables an educated assessment of the different primer options that could be used to minimize non-target interference. The chosen primers could then be synthesized and experimentally characterized with PCR or quantitative PCR (qPCR).
 
-Improved specificity to the target group is achieved in two ways: first by decreasing hybridization efficiency and second by minimizing elongation efficiency of the primer with non-target DNA. Hybridization efficiency is a theoretical variable that represents the fraction of DNA template bound to primer during the annealing step of PCR thermal cycling. In this manner, mismatches between the primer and DNA templates are utilized to lower the affinity of the primers to non-target DNA. Elongation efficiency represents the efficiency of the DNA polymerase at initiating extension of the DNA template from a mismatched 3' primer terminus, and is measured relative to the perfectly matched primer's ability to elongate. Mismatches near the 3' end of the primer are used to hinder extension of non-target DNA templates thereby increasing specificity of the primers to target DNA. Therefore, this model of terminal mismatches offers the dual benefits of decreased hybridization and elongation efficiency, which allows for more accurate predictions of amplification efficiency and increased specificity to the target group.
+Possible applications include:
+
+-   allele specific PCR
+
+-   quantifying a subset of organisms in a sample
+
+-   enriching for the DNA of a target group before downstream sequencing.
+
+Improved specificity to the target group is achieved in two ways: 1) by decreasing hybridization efficiency, and 2) by minimizing elongation efficiency of the primer with non-target DNA. Hybridization efficiency is a theoretical variable that represents the fraction of DNA template bound to primer during the annealing step of PCR thermal cycling. In this manner, mismatches between the primer and DNA templates are utilized to lower the affinity of the primers to non-target DNA. Elongation efficiency represents the efficiency of the DNA polymerase at initiating extension of the DNA template from a mismatched 3' primer terminus, and is measured relative to the perfectly matched primer's ability to elongate. Mismatches near the 3' end of the primer are used to hinder extension of non-target DNA templates thereby increasing specificity of the primers to target DNA. Therefore, this model of terminal mismatches offers the dual benefits of decreased hybridization and elongation efficiency, which allows for more accurate predictions of amplification efficiency and increased specificity to the target group.
 
 # Getting Started
 
@@ -35,12 +36,13 @@ The program OligoArrayAux (<http://www.unafold.org/Dinamelt/software/oligoarraya
 system("hybrid-min -V")
 ```
 
-## Startup
+## Start up
 
 To get started we need to load the **DECIPHER** package, which automatically loads several other required packages.
 
 ```{r startup}
 library(DECIPHER)
+library(dplyr)
 ```
 
 Help for the `DesignPrimers` function can be accessed through:
@@ -137,87 +139,15 @@ The predicted forward and reverse primer efficiencies are respectively 84.4% and
 
 We could potentially examine all primers one-by-one to find the best forward and reverse primers to amplify only the target group. Another option is to allow the program to find the best primer sets by searching through all combinations of forward and reverse primers. To do this we simply change the parameter `numPrimerSets` to a positive number from its default of zero. In doing so the `DesignPrimers` function will search through the best forward and reverse primers to find the option that minimizes forward and reverse primer overlap. Furthermore, the program will search potential target sites within 20 nucleotides of where the primer might bind upstream and downstream of its target site in the alignment.
 
-```{r expr10,eval=FALSE}
+```{r expr10}
 primers <- DesignPrimers(tiles, identifier="avermitilis", minCoverage=1,
 	minGroupCoverage=1, numPrimerSets=5, maxSearchSize=20)
 ```
 
-```         
-avermitilis (499):
-  |===========================================================================| 100%
-Determining Best Primer Pairs:
-  |===========================================================================| 100%
-
-Time difference of 50 secs
-```
-
 Now each row of the output (`primers`) contains one pair of forward and reverse primers. Examining the output we see that several primer sets are predicted to only amplify *S. avermitilis* and not any other species, as shown by the empty column *mismatches_set*.
 
-```{r expr11,eval=FALSE}
-head(primers)
-```
-
-```         
-   identifier start_forward start_reverse product_size start_aligned_forward
-1 avermitilis           245           325           81                   247
-2 avermitilis           245           322           78                   247
-3 avermitilis           245           326           82                   247
-4 avermitilis           245           324           80                   247
-5 avermitilis           245           324           80                   247
-  start_aligned_reverse permutations_forward permutations_reverse score_forward
-1                   350                    1                    1             0
-2                   347                    1                    1             0
-3                   351                    1                    1             0
-4                   349                    1                    1             0
-5                   348                    1                    1             0
-  score_reverse score_set         forward_primer.1 forward_primer.2
-1  -9.89275....         0 CGTTGATTATTCGGCACACTCGAC             <NA>
-2  -1.73715....         0 CGTTGATTATTCGGCACACTCGAC             <NA>
-3  -3.64000....         0 CGTTGATTATTCGGCACACTCGAC             <NA>
-4  -7.75520....         0 CGTTGATTATTCGGCACACTCGAC             <NA>
-5  -9.21065....         0 CGTTGATTATTCGGCACACTCGAC             <NA>
-  forward_primer.3 forward_primer.4   reverse_primer.1 reverse_primer.2
-1             <NA>             <NA>  CCCTCGCCCTCCCATGT             <NA>
-2             <NA>             <NA>  TCGCCCTCCCATGTTCG             <NA>
-3             <NA>             <NA>  ACCCTCGCCCTCCCATG             <NA>
-4             <NA>             <NA>  CCTCGCCCTCCCATGTT             <NA>
-5             <NA>             <NA> CCTCGCCCTCCCATGTTC             <NA>
-  reverse_primer.3 reverse_primer.4 forward_efficiency.1 forward_efficiency.2
-1             <NA>             <NA>         0.954290....                   NA
-2             <NA>             <NA>         0.954290....                   NA
-3             <NA>             <NA>         0.954290....                   NA
-4             <NA>             <NA>         0.954290....                   NA
-5             <NA>             <NA>         0.954290....                   NA
-  forward_efficiency.3 forward_efficiency.4 reverse_efficiency.1
-1                   NA                   NA         0.925497....
-2                   NA                   NA         0.846634....
-3                   NA                   NA         0.944266....
-4                   NA                   NA         0.906760....
-5                   NA                   NA         0.933138....
-  reverse_efficiency.2 reverse_efficiency.3 reverse_efficiency.4
-1                   NA                   NA                   NA
-2                   NA                   NA                   NA
-3                   NA                   NA                   NA
-4                   NA                   NA                   NA
-5                   NA                   NA                   NA
-  forward_coverage.1 forward_coverage.2 forward_coverage.3 forward_coverage.4
-1                  1                 NA                 NA                 NA
-2                  1                 NA                 NA                 NA
-3                  1                 NA                 NA                 NA
-4                  1                 NA                 NA                 NA
-5                  1                 NA                 NA                 NA
-  reverse_coverage.1 reverse_coverage.2 reverse_coverage.3 reverse_coverage.4
-1                  1                 NA                 NA                 NA
-2                  1                 NA                 NA                 NA
-3                  1                 NA                 NA                 NA
-4                  1                 NA                 NA                 NA
-5                  1                 NA                 NA                 NA
-  mismatches_forward mismatches_reverse mismatches_set
-1                                                     
-2                                                     
-3                                                     
-4                                                     
-5                                                     
+```{r expr11}
+head(primers) |> as_tibble()
 ```
 
 # Additional Primer Analysis
@@ -226,40 +156,32 @@ head(primers)
 
 After choosing forward and reverse primers we can graph their melt curves in order to predict how they will behave at different annealing temperatures. Recall that in this example there is only a single forward or reverse primer permutation necessary to cover the entire group.
 
-```{r expr12,eval=FALSE}
+```{r expr12}
 temp_range <- 60:75
 ps <- c("CGTTGATTATTCGGCACACTCGAC", "CCCTCGCCCTCCCATGT") # forward and reverse
 f <- function(temp) {
-	CalculateEfficiencyPCR(ps, reverseComplement(DNAStringSet(ps)),
-		temp, P=4e-7, ions=.225)
+  CalculateEfficiencyPCR(ps, reverseComplement(DNAStringSet(ps)),
+                         temp, P=4e-7, ions=.225)
 }
 efficiency <- matrix(unlist(lapply(temp_range, f)), ncol=2, byrow=TRUE)
 plot(temp_range, efficiency[,1], ylim=c(0,1), ylab="Hybridization Efficiency",
-	xlab=expression(paste("Temperature (", degree, "C)", sep="")),
-	type="l", lwd=2, col="Blue", main="Denaturation Plot")
+     xlab=expression(paste("Temperature (", degree, "C)", sep="")),
+     type="l", lwd=2, col="Blue", main="Denaturation Plot")
 lines(temp_range, efficiency[,2], col="Red", lwd=2)
 abline(h=0.5, lty=2, lwd=2, col="Orange")
 abline(v=64, lty=2, lwd=2, col="Green")
-legend("topright", legend=c("Forward Primer", "Reverse Primer", "50
-	"Annealing Temperature"), col=c("Blue", "Red", "Orange", "Green"),
-	lwd=c(2, 2, 2, 2), lty=c(1, 1, 2, 2))
+legend("topright", legend=c("Forward Primer", "Reverse Primer", "50% Efficiency",
+                            "Annealing Temperature"), col=c("Blue", "Red", "Orange", "Green"),
+       lwd=c(2, 2, 2, 2), lty=c(1, 1, 2, 2))
 ```
 
-```{=tex}
-\begin{figure}
-\begin{center}
-\includegraphics[width=.5\textwidth]{DenaturationPlot}
-\caption{ {#f1} Melt curves for the forward and reverse primers}
-\end{center}
-\end{figure}
-```
 We originally designed the primers to have at least 80% `minEfficiency` at the annealing temperature of $64^{\circ}C$, and it is clear from the graph that both primers are predicted to have similarly high efficiencies at this temperature. However, it appears that the forward primer will denature more quickly than the reverse primer as the temperature is increased. This is due to the fact that these primers have different enthalpy and entropy, but similar free energies of duplex formation near the annealing temperature where their melt curves intersect.
 
 ## Visualizing the Target Sites
 
 Often it is useful to visualize the sequence region where the primers will anneal on both the target and non-targets side-by-side. We can accomplish this by looking at the amplicon sequences and highlighting the region of both primers. First we query the database for the sequences of interest and proceed to trim them to the region around the amplicon given by the `start_aligned_forward` and `start_aligned_reverse` outputs of `DesignPrimers`. Next we name and order the unique sequences in the set such that the target (*S. avermitilis*) appears at the top.
 
-```{r expr13,eval=TRUE}
+```{r expr13}
 dna <- SearchDB(dbConn)
 dbDisconnect(dbConn)
 amplicon <- subseq(dna, 247, 348)
@@ -275,18 +197,10 @@ amplicon <- c(amplicon[w], amplicon[-w])
 
 Then we can use the function `BrowseSeqs` to visualize the target site for each primer in the amplicon. This command will open a new window in the default web browser. The top sequence shows the target (*S. avermitilis*), and each primer's target site is colored. We can highlight the target sequence so that only mismatches are colored in the non-target sequences. It is clear why this target site was chosen, because all other *Streptomyces* species have multiple mismatches to both the forward and reverse primers. The non-target mismatches, especially those located nearest the 3' end (towards the center of the amplicon), will act to lower both hybridization and elongation efficiency of non-target amplification.
 
-```{r expr14,eval=FALSE}
+```{r expr14}
 BrowseSeqs(amplicon, colorPatterns=c(4, 27, 76, 94), highlight=1)
 ```
 
-```{=tex}
-\begin{figure}
-\begin{center}
-\includegraphics[width=1\textwidth]{BrowseAmpliconOutput}
-\caption{ {#f1} Amplicon with the target site for each primer colored}
-\end{center}
-\end{figure}
-```
 ## Finishing Up
 
 Finally, we can order the forward and reverse primers for synthesis and try them out in a PCR reaction! The forward and reverse primers should be synthesized in the same orientation and sense that they are listed in the output (`primers`). Initially it may be useful to perform a temperature gradient PCR reaction with the target DNA in order to experimentally determine the melt point. For example, in this case we would run several reactions with the target species at increasing temperature, from about $56^{\circ}C$ to $72^{\circ}C$. As the annealing temperature is increased the hybridization efficiency will eventually decrease until no amplification is observed. In subsequent experiments the annealing temperature should be set just below the highest temperature where robust amplification was observed.
